@@ -26,9 +26,9 @@ in the selected window, or it may be the actual image pixels. In any case
 calling <i>sync()</i> insures that the base image is updated with the contents
 of the modified pixel cache. The method
 <i>decode() </i>supports copying
-foreign pixel data formats into the pixel cache according to the <i>QuantumType</i>.
+foreign pixel data formats into the pixel cache according to the <i>QuantumTypes</i>.
 The method <i>encode()</i> supports copying the pixels in the cache to
-a foreign pixel representation according to the format specified by <i>QuantumType</i>.
+a foreign pixel representation according to the format specified by <i>QuantumTypes</i>.
 <p>The pixel view is a small image in which the pixels may be accessed,
 addressed, and updated, as shown in the following example, which produces
 an image similar to the one on the right (minus lines and text):
@@ -232,7 +232,7 @@ for each pixel in the image.</font></td>
 
 <td><font color="#999999"><font size=-1>void</font></font></td>
 
-<td><font color="#999999"><font size=-1><a href="Enumerations.html#QuantumType">QuantumType</a>
+<td><font color="#999999"><font size=-1><a href="Enumerations.html#QuantumTypes">QuantumTypes</a>
 quantum_, unsigned char *source_,</font></font></td>
 
 <td><font color="#999999"><font size=-1>Transfers one or more pixel components
@@ -247,7 +247,7 @@ is typically used to support image decoders.</font></font></td>
 
 <td><font color="#999999"><font size=-1>void</font></font></td>
 
-<td><font color="#999999"><font size=-1><a href="Enumerations.html#QuantumType">QuantumType</a>
+<td><font color="#999999"><font size=-1><a href="Enumerations.html#QuantumTypes">QuantumTypes</a>
 quantum_, unsigned char *destination_</font></font></td>
 
 <td><font color="#999999"><font size=-1>Transfers one or more pixel components
